# msst

./: pyproject.toml
configs/: config_mdx23c_drums.yaml
docs/: augmentations.md  dataset_types.md
gui/: gui-wx.py
msst/: inference.py  train.py  train_accelerate.py  train_ddp.py  valid.py  valid_ddp.py
msst/models/: mdx23c_tfc_tdf_v3.py  mdx23c_tfc_tdf_v3_with_STHT.py  mdxnet_onnx.py  segm_models.py  torchseg_models.py  upernet_swin_transformers.py
msst/models/bandit/: model_from_config.py
msst/models/bandit/core/: __init__.py
msst/models/bandit/core/data/: augmentation.py  base.py
msst/models/bandit/core/data/dnr/: dataset.py
msst/models/bandit/core/data/musdb/: datamodule.py  dataset.py
msst/models/bandit/core/loss/: _timefreq.py
msst/models/bandit/core/model/bsrnn/: __init__.py  bandsplit.py  core.py  maskestim.py  wrapper.py
msst/models/bs_mamba2_code/: bs_mamba2.py
msst/models/bs_roformer/: __init__.py  attend.py  attend_sage.py  bs_conformer.py  bs_roformer.py  bs_roformer_experimental.py  mel_band_conformer.py  mel_band_roformer.py  mel_band_roformer_experimental.py
msst/models/scnet/: scnet_tran.py
msst/models/scnet_unofficial/: __init__.py  scnet.py
msst/models/scnet_unofficial/modules/: __init__.py  sd_encoder.py  su_decoder.py
msst/utils/: metrics.py  model_utils.py  settings.py
scripts/: do_metadata.py  print_list_of_model_layers.py  redact_config.py  stream.py
tests/: admin_test.py  test.py
