[project]
name = "msst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    # "asteroid==0.7.0",
    # "audiomentations==0.24.0",
    # "beartype==0.14.1",
    # "einops==0.8.1",
    "huggingface-hub>=0.23.0",
    "librosa>=0.9.2",
    "loralib>=0.1.2",
    "ml-collections>=1.1.0",
    "numpy>=1.23.5",
    "omegaconf==2.2.3",
    "pandas>=2.3.3",
    "pedalboard~=0.8.1",
    # "protobuf==3.20.3",
    # "rotary-embedding-torch==0.3.5",
    # "sageattention==1.0.6",
    "pytorch-optimizer>=3.8.2",
    "scipy>=1.10.1",
    # "segmentation-models-pytorch==0.3.3",
    "soundfile>=0.13.1",
    # "spafe==0.3.2",
    # "timm==0.9.2",
    "torch>=2.0.1",
    # "torch-audiomentations>=0.12.0",
    "torchaudio>=2.1.2",
    # "torchmetrics==0.11.4",
    "tqdm>=4.67.1",
    "transformers~=4.35.0",
    "wandb>=0.23.1",
    # "wxpython==4.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
